objects/GetFeedback_Aut__Survey__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPS Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GetFeedback_Aut__GetFeedbackId__c</fullName>
        <externalId>true</externalId>
        <label>GetFeedbackId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NPS_Comment__c</fullName>
        <label>NPS Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPS_Consent_to_Follow_Up__c</fullName>
        <label>NPS Consent to Follow Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS_Grouping__c</fullName>
        <formula>IF( NPS_Score__c &gt; 8, &quot;Promoter&quot;,
IF(OR(NPS_Score__c = 7, NPS_Score__c = 8), &quot;Passive&quot;,
IF( NPS_Score__c  &lt;= 6 , &quot;Detractor&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Reason__c</fullName>
        <label>NPS Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Response_URL__c</fullName>
        <label>NPS Response URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Follow_Up__c</fullName>
        <label>NPS Survey Follow Up</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Survey_Respondent_Role__c</fullName>
        <label>Survey Respondent Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Release Manager</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>GetFeedback_Aut__All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Survey_Respondent_Role__c</columns>
        <columns>NPS_Score__c</columns>
        <columns>NPS_Reason__c</columns>
        <columns>NPS_Grouping__c</columns>
        <columns>NPS_Response_URL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NPS_List_View</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NPS_Score__c</columns>
        <columns>NPS_Grouping__c</columns>
        <columns>NPS_Reason__c</columns>
        <columns>NPS_Comment__c</columns>
        <columns>Survey_Respondent_Role__c</columns>
        <columns>NPS_Consent_to_Follow_Up__c</columns>
        <columns>NPS_Response_URL__c</columns>
        <columns>GetFeedback_Aut__GetFeedbackId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/26/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Net Promoter Score</value>
        </filters>
        <label>NPS List View</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>